sassi-macros/tests/lihaaf/compile_fail/cacheable_field_level_watermark.stderr
error: Cacheable: field-level #[cacheable(...)] options are not supported; place `watermark_field` on the struct
 --> $DIR/cacheable_field_level_watermark.rs:8:5
  |
8 |     #[cacheable(watermark_field = "updated_at")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error
